--- a/index.html
+++ b/index.html
@@ -4,8 +4,69 @@
 		<title>home</title>
 	</head>
 	<body>
-		<div>
-			hi
-		</div>
+		<input type="text" name="search" placeholder="Search.." id='search'>
+		<script>
+			//Variables
+			var $search = document.querySelector('#search');
+
+			//Functions
+			function hi(e){
+				if(e.key === "Enter"){
+					submit()
+				}
+			}
+
+			function grabData() {
+
+				// Getting all the input tags
+				var $inputs = document.querySelectorAll('input');
+
+				// Defining a variable to store all the data
+				var data = {};
+
+				// Looping through all the input tags
+				for(var i = 0; i < $inputs.length; i++) {
+
+					// Getting the ith input tag
+					var $input = $inputs[i];
+
+					// Getting the name of the data that the input tag holds
+					var name = $input.name;
+
+					// Getting the value that the user entered into the input tag
+					var value = $input.value;
+
+					// Storing the value and its name
+					data[name] = value
+				}
+
+				// Outputting the data
+				return data;
+			}
+
+			function sendData(data) {
+
+				// Creating a new request to the server that contains the data
+				var req = new XMLHttpRequest();
+
+				// Opening up a connection with the server to 'POST' data
+				req.open('POST', '/', true);
+
+				// Explain to the server that we are sending the data in json format
+				req.setRequestHeader('content-type', 'application/json')
+
+				// Sending the data in JSON format
+				req.send(JSON.stringify(data));
+			}
+
+			function submit() {
+				var formData = grabData();
+				sendData(formData);
+			}
+
+			//Event listeners
+			$search.addEventListener('keydown', hi);
+			
+		</script>
 	</body>
 </html>
